--- a/states/load-balancer-config/etc/haproxy/haproxy.cfg
+++ b/states/load-balancer-config/etc/haproxy/haproxy.cfg
@@ -10,8 +10,8 @@ global
         group haproxy
         daemon
 
-        # general hardlimit for the process of connections to handle, this is separate to backend/frontend
-        # Added in 'global' AND 'defaults'!!! - global affects only system limits (ulimit/maxsock) and defaults affects only frontend/backend-limits - hez
+        # general hardlimit for the process of connections to handle, this is separate to backend/listen
+        # Added in 'global' AND 'defaults'!!! - global affects only system limits (ulimit/maxsock) and defaults affects only listen/backend-limits - hez
         maxconn 400000
 
         # Default SSL material locations
@@ -34,7 +34,6 @@ defaults
         option  tcpka
         option  dontlognull
         retries 2
-        http-check expect status 200
         timeout connect 5s
         timeout client  5s
         timeout server  5s
@@ -47,8 +46,8 @@ defaults
         # errorfile 503 /etc/haproxy/errors/503.http
         # errorfile 504 /etc/haproxy/errors/504.http
 
-        # general hardlimit for the process of connections to handle, this is separate to backend/frontend
-        # Added in 'global' AND 'defaults'!!! - global affects only system limits (ulimit/maxsock) and defaults affects only frontend/backend-limits - hez
+        # general hardlimit for the process of connections to handle, this is separate to backend/listen
+        # Added in 'global' AND 'defaults'!!! - global affects only system limits (ulimit/maxsock) and defaults affects only listen/backend-limits - hez
         maxconn 400000
 
 # zypper -n in whois; mkpasswd -m sha-512 <password>
@@ -65,130 +64,118 @@ listen stats
         stats hide-version
         stats uri /stats
 
-frontend rancher_apiserver
-	bind 192.168.0.46:6443
-	option httpchk GET /healthz
-	use_backend rancher_apiserver_backend
-frontend rancher_register
-	bind 192.168.0.46:9345
-	option httpchk GET /healthz
-	use_backend rancher_register_backend
-frontend rancher_ingress80
-	bind 192.168.0.46:80
-	use_backend rancher_ingress80_backend
-frontend rancher_ingress443
-	bind 192.168.0.46:443
-	use_backend rancher_ingress443_backend
+listen rancher_apiserver
+        bind 192.168.0.46:6443
+        option httpchk GET /healthz
+        http-check expect status 401
+        server rancher-master-01 rancher-master-01.suse:6443 check check-ssl verify none
+        server rancher-master-02 rancher-master-02.suse:6443 check check-ssl verify none
+        server rancher-master-03 rancher-master-03.suse:6443 check check-ssl verify none
+listen rancher_register
+        bind 192.168.0.46:9345
+        option httpchk GET /ping
+        http-check expect status 200
+        server rancher-master-01 rancher-master-01.suse:9345 check check-ssl verify none
+        server rancher-master-02 rancher-master-02.suse:9345 check check-ssl verify none
+        server rancher-master-03 rancher-master-03.suse:9345 check check-ssl verify none
+listen rancher_ingress80
+        bind 192.168.0.46:80
+        option httpchk GET /
+        http-check expect status 404
+        server rancher-master-01 rancher-master-01.suse:80 check
+        server rancher-master-02 rancher-master-02.suse:80 check
+        server rancher-master-03 rancher-master-03.suse:80 check
+listen rancher_ingress443
+        bind 192.168.0.46:443
+        option httpchk GET /
+        http-check expect status 404
+        server rancher-master-01 rancher-master-01.suse:443 check check-ssl verify none
+        server rancher-master-03 rancher-master-03.suse:443 check check-ssl verify none
+        server rancher-master-02 rancher-master-02.suse:443 check check-ssl verify none
 
-backend rancher_apiserver_backend
-	server rancher-master-01 rancher-master-01.suse:6443 check check-ssl verify none
-	server rancher-master-02 rancher-master-02.suse:6443 check check-ssl verify none
-	server rancher-master-03 rancher-master-03.suse:6443 check check-ssl verify none
-backend rancher_register_backend
-	server rancher-master-01 rancher-master-01.suse:9345 check check-ssl verify none
-	server rancher-master-02 rancher-master-02.suse:9345 check check-ssl verify none
-	server rancher-master-03 rancher-master-03.suse:9345 check check-ssl verify none
-backend rancher_ingress80_backend
-	server rancher-master-01 rancher-master-01.suse:80 check
-	server rancher-master-02 rancher-master-02.suse:80 check
-	server rancher-master-03 rancher-master-03.suse:80 check
-backend rancher_ingress443_backend
-	server rancher-master-01 rancher-master-01.suse:443 check check-ssl verify none
-	server rancher-master-03 rancher-master-03.suse:443 check check-ssl verify none
-	server rancher-master-02 rancher-master-02.suse:443 check check-ssl verify none
+listen rke-test_apiserver
+        bind 192.168.0.60:6443
+        option httpchk GET /healthz
+        http-check expect status 401
+        server rke-test-master-01 rke-test-master-01.suse:6443 check check-ssl verify none
+        server rke-test-master-02 rke-test-master-02.suse:6443 check check-ssl verify none
+        server rke-test-master-03 rke-test-master-03.suse:6443 check check-ssl verify none
+listen rke-test_register
+        bind 192.168.0.60:9345
+        option httpchk GET /ping
+        http-check expect status 200
+        server rke-test-master-01 rke-test-master-01.suse:9345 check check-ssl verify none
+        server rke-test-master-02 rke-test-master-02.suse:9345 check check-ssl verify none
+        server rke-test-master-03 rke-test-master-03.suse:9345 check check-ssl verify none
+listen rke-test_ingress80
+        bind 192.168.0.60:80
+        option httpchk GET /
+        http-check expect status 404
+        server rke-test-worker-01 rke-test-worker-01.suse:80 check
+        server rke-test-worker-02 rke-test-worker-02.suse:80 check
+        server rke-test-worker-03 rke-test-worker-03.suse:80 check
+listen rke-test_ingress443
+        bind 192.168.0.60:443
+        option httpchk GET /
+        http-check expect status 404
+        server rke-test-worker-01 rke-test-worker-01.suse:443 check check-ssl verify none
+        server rke-test-worker-02 rke-test-worker-02.suse:443 check check-ssl verify none
+        server rke-test-worker-03 rke-test-worker-03.suse:443 check check-ssl verify none
 
-frontend rke-test_apiserver
-	bind 192.168.0.60:6443
-	option httpchk GET /healthz
-	use_backend rke-test_apiserver_backend
-frontend rke-test_register
-	bind 192.168.0.60:9345
-	option httpchk GET /healthz
-	use_backend rke-test_register_backend
-frontend rke-test_ingress80
-	bind 192.168.0.60:80
-	use_backend rke-test_ingress80_backend
-frontend rke-test_ingress443
-	bind 192.168.0.60:443
-	use_backend rke-test_ingress443_backend
+listen rke-int_apiserver
+        bind 192.168.0.67:6443
+        option httpchk GET /healthz
+        http-check expect status 401
+        server rke-int-master-01 rke-int-master-01.suse:6443 check check-ssl verify none
+        server rke-int-master-02 rke-int-master-02.suse:6443 check check-ssl verify none
+        server rke-int-master-03 rke-int-master-03.suse:6443 check check-ssl verify none
+listen rke-int_register
+        bind 192.168.0.67:9345
+        option httpchk GET /ping
+        http-check expect status 200
+        server rke-int-master-01 rke-int-master-01.suse:9345 check check-ssl verify none
+        server rke-int-master-02 rke-int-master-02.suse:9345 check check-ssl verify none
+        server rke-int-master-03 rke-int-master-03.suse:9345 check check-ssl verify none
+listen rke-int_ingress80
+        bind 192.168.0.67:80
+        option httpchk GET /
+        http-check expect status 404
+        server rke-int-worker-01 rke-int-worker-01.suse:80 check
+        server rke-int-worker-02 rke-int-worker-02.suse:80 check
+        server rke-int-worker-03 rke-int-worker-03.suse:80 check
+listen rke-int_ingress443
+        bind 192.168.0.67:443
+        option httpchk GET /
+        http-check expect status 404
+        server rke-int-worker-01 rke-int-worker-01.suse:443 check check-ssl verify none
+        server rke-int-worker-02 rke-int-worker-02.suse:443 check check-ssl verify none
+        server rke-int-worker-03 rke-int-worker-03.suse:443 check check-ssl verify none
 
-backend rke-test_apiserver_backend
-	server rke-test-master-01 rke-test-master-01.suse:6443 check check-ssl verify none
-	server rke-test-master-02 rke-test-master-02.suse:6443 check check-ssl verify none
-	server rke-test-master-03 rke-test-master-03.suse:6443 check check-ssl verify none
-backend rke-test_register_backend
-	server rke-test-master-01 rke-test-master-01.suse:9345 check check-ssl verify none
-	server rke-test-master-02 rke-test-master-02.suse:9345 check check-ssl verify none
-	server rke-test-master-03 rke-test-master-03.suse:9345 check check-ssl verify none
-backend rke-test_ingress80_backend
-	server rke-test-worker-01 rke-test-worker-01.suse:80 check
-	server rke-test-worker-02 rke-test-worker-02.suse:80 check
-	server rke-test-worker-03 rke-test-worker-03.suse:80 check
-backend rke-test_ingress443_backend
-	server rke-test-worker-01 rke-test-worker-01.suse:443 check check-ssl verify none
-	server rke-test-worker-02 rke-test-worker-02.suse:443 check check-ssl verify none
-	server rke-test-worker-03 rke-test-worker-03.suse:443 check check-ssl verify none
-	
-frontend rke-int_apiserver
-	bind 192.168.0.67:6443
-	option httpchk GET /healthz
-	use_backend rke-int_apiserver_backend
-frontend rke-int_register
-	bind 192.168.0.67:9345
-	option httpchk GET /healthz
-	use_backend rke-int_register_backend
-frontend rke-int_ingress80
-	bind 192.168.0.67:80
-	use_backend rke-int_ingress80_backend
-frontend rke-int_ingress443
-	bind 192.168.0.67:443
-	use_backend rke-int_ingress443_backend
-
-backend rke-int_apiserver_backend
-	server rke-int-master-01 rke-int-master-01.suse:6443 check check-ssl verify none
-	server rke-int-master-02 rke-int-master-02.suse:6443 check check-ssl verify none
-	server rke-int-master-03 rke-int-master-03.suse:6443 check check-ssl verify none
-backend rke-int_register_backend
-	server rke-int-master-01 rke-int-master-01.suse:9345 check check-ssl verify none
-	server rke-int-master-02 rke-int-master-02.suse:9345 check check-ssl verify none
-	server rke-int-master-03 rke-int-master-03.suse:9345 check check-ssl verify none
-backend rke-int_ingress80_backend
-	server rke-int-worker-01 rke-int-worker-01.suse:80 check
-	server rke-int-worker-02 rke-int-worker-02.suse:80 check
-	server rke-int-worker-03 rke-int-worker-03.suse:80 check
-backend rke-int_ingress443_backend
-	server rke-int-worker-01 rke-int-worker-01.suse:443 check check-ssl verify none
-	server rke-int-worker-02 rke-int-worker-02.suse:443 check check-ssl verify none
-	server rke-int-worker-03 rke-int-worker-03.suse:443 check check-ssl verify none
-	
-frontend rke-prod_apiserver
-	bind 192.168.0.68:6443
-	option httpchk GET /healthz
-	use_backend rke-prod_apiserver_backend
-frontend rke-prod_register
-	bind 192.168.0.68:9345
-	option httpchk GET /healthz
-	use_backend rke-prod_register_backend
-frontend rke-prod_ingress80
-	bind 192.168.0.68:80
-	use_backend rke-prod_ingress80_backend
-frontend rke-prod_ingress443
-	bind 192.168.0.68:443
-	use_backend rke-prod_ingress443_backend
-
-backend rke-prod_apiserver_backend
-	server rke-prod-master-01 rke-prod-master-01.suse:6443 check check-ssl verify none
-	server rke-prod-master-02 rke-prod-master-02.suse:6443 check check-ssl verify none
-	server rke-prod-master-03 rke-prod-master-03.suse:6443 check check-ssl verify none
-backend rke-prod_register_backend
-	server rke-prod-master-01 rke-prod-master-01.suse:9345 check check-ssl verify none
-	server rke-prod-master-02 rke-prod-master-02.suse:9345 check check-ssl verify none
-	server rke-prod-master-03 rke-prod-master-03.suse:9345 check check-ssl verify none
-backend rke-prod_ingress80_backend
-	server rke-prod-worker-01 rke-prod-worker-01.suse:80 check
-	server rke-prod-worker-02 rke-prod-worker-02.suse:80 check
-	server rke-prod-worker-03 rke-prod-worker-03.suse:80 check
-backend rke-prod_ingress443_backend
-	server rke-prod-worker-01 rke-prod-worker-01.suse:443 check check-ssl verify none
-	server rke-prod-worker-02 rke-prod-worker-02.suse:443 check check-ssl verify none
-	server rke-prod-worker-03 rke-prod-worker-03.suse:443 check check-ssl verify none
+listen rke-prod_apiserver
+        bind 192.168.0.68:6443
+        option httpchk GET /healthz
+        http-check expect status 401
+        server rke-prod-master-01 rke-prod-master-01.suse:6443 check check-ssl verify none
+        server rke-prod-master-02 rke-prod-master-02.suse:6443 check check-ssl verify none
+        server rke-prod-master-03 rke-prod-master-03.suse:6443 check check-ssl verify none
+listen rke-prod_register
+        bind 192.168.0.68:9345
+        option httpchk GET /ping
+        http-check expect status 200
+        server rke-prod-master-01 rke-prod-master-01.suse:9345 check check-ssl verify none
+        server rke-prod-master-02 rke-prod-master-02.suse:9345 check check-ssl verify none
+        server rke-prod-master-03 rke-prod-master-03.suse:9345 check check-ssl verify none
+listen rke-prod_ingress80
+        bind 192.168.0.68:80
+        option httpchk GET /
+        http-check expect status 404
+        server rke-prod-worker-01 rke-prod-worker-01.suse:80 check
+        server rke-prod-worker-02 rke-prod-worker-02.suse:80 check
+        server rke-prod-worker-03 rke-prod-worker-03.suse:80 check
+listen rke-prod_ingress443
+        bind 192.168.0.68:443
+        option httpchk GET /
+        http-check expect status 404
+        server rke-prod-worker-01 rke-prod-worker-01.suse:443 check check-ssl verify none
+        server rke-prod-worker-02 rke-prod-worker-02.suse:443 check check-ssl verify none
+        server rke-prod-worker-03 rke-prod-worker-03.suse:443 check check-ssl verify none
